# lock-solver2

./: input0.txt  lockservice.py  pyproject.toml  requirements.txt  server.py  switches.py
.github/workflows/: pro.yaml
docs/: index.html  index.js  style.css  switches.js
locksolver/: computervision.py  lockservice.py  server.py  switches.py
locksolver/utils/: lockservice.py
