[tool.poetry]
name = "switches"
version = "0.1.0"
description = ""
authors = ["Miguel Martín <miguel@ateneamobility.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
opencv-python = "^4.8.0.76"
pytesseract = "^0.3.10"
tesseract = "^0.1.3"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
