[tool.poetry]
name = "lock-solver2"
version = "0.1.0"
description = ""
authors = ["Miguel Martín <miguel.martr11@gmail.com>"]
readme = "README.md"
packages = [
    { include = "locksolver"},
]



[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.0.76"
pytesseract = "^0.3.10"
tesseract = "^0.1.3"
flask-cors = "^4.0.0"
pipenv-poetry-migrate = "^0.4.0"
flask = "^2.3.2"
aws-wsgi = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


